// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SiteFooter (snapshot) > matches snapshot with logoSrc 1`] = `
<div>
  <footer
    class="border-t border-border bg-background px-4 pb-6 pt-12 sm:px-6"
  >
    <div
      class="mx-auto max-w-[1100px]"
    >
      <div
        class="grid gap-8 sm:grid-cols-2 lg:[grid-template-columns:1.4fr_1fr_1fr_1fr]"
      >
        <div
          class="sm:col-span-2 lg:col-span-1"
        >
          <div
            class="mb-2.5 flex items-center gap-2.5"
          >
            <img
              alt="Olympus"
              class="h-[22px] w-auto"
              height="22"
              src="/logo.svg"
              width="22"
            />
            <span
              class="text-sm font-semibold text-foreground"
            >
              Olympus
            </span>
          </div>
          <p
            class="m-0 max-w-[280px] text-[13px] leading-relaxed text-muted-foreground"
          >
            A free identity solution and OAuth2 layer for teams that run their own infrastructure.
          </p>
        </div>
        <div>
          <div
            class="mb-2.5 font-mono text-xs font-medium uppercase tracking-[0.06em] text-muted-foreground"
          >
            Product
          </div>
          <ul
            class="m-0 flex list-none flex-col gap-2 p-0"
          >
            <li>
              <a
                class="text-[13px] font-medium text-muted-foreground no-underline transition-colors hover:text-foreground"
                href="https://github.com/OlympusOSS/hera"
              >
                hera (auth UI)
              </a>
            </li>
            <li>
              <a
                class="text-[13px] font-medium text-muted-foreground no-underline transition-colors hover:text-foreground"
                href="https://github.com/OlympusOSS/athena"
              >
                athena (admin)
              </a>
            </li>
            <li>
              <a
                class="text-[13px] font-medium text-muted-foreground no-underline transition-colors hover:text-foreground"
                href="https://github.com/OlympusOSS/canvas"
              >
                canvas (design system)
              </a>
            </li>
            <li>
              <a
                class="text-[13px] font-medium text-muted-foreground no-underline transition-colors hover:text-foreground"
                href="https://github.com/OlympusOSS/sdk"
              >
                SDK
              </a>
            </li>
          </ul>
        </div>
        <div>
          <div
            class="mb-2.5 font-mono text-xs font-medium uppercase tracking-[0.06em] text-muted-foreground"
          >
            Docs
          </div>
          <ul
            class="m-0 flex list-none flex-col gap-2 p-0"
          >
            <li>
              <a
                class="text-[13px] font-medium text-muted-foreground no-underline transition-colors hover:text-foreground"
                href="/docs"
              >
                Getting started
              </a>
            </li>
            <li>
              <a
                class="text-[13px] font-medium text-muted-foreground no-underline transition-colors hover:text-foreground"
                href="/docs/integrate/oauth2-overview"
              >
                OAuth2
              </a>
            </li>
            <li>
              <a
                class="text-[13px] font-medium text-muted-foreground no-underline transition-colors hover:text-foreground"
                href="/docs/identity/identity-schemas"
              >
                Kratos schemas
              </a>
            </li>
            <li>
              <a
                class="text-[13px] font-medium text-muted-foreground no-underline transition-colors hover:text-foreground"
                href="/docs/deploy/overview"
              >
                Self-hosting
              </a>
            </li>
          </ul>
        </div>
        <div>
          <div
            class="mb-2.5 font-mono text-xs font-medium uppercase tracking-[0.06em] text-muted-foreground"
          >
            Company
          </div>
          <ul
            class="m-0 flex list-none flex-col gap-2 p-0"
          >
            <li>
              <a
                class="text-[13px] font-medium text-muted-foreground no-underline transition-colors hover:text-foreground"
                href="https://github.com/orgs/OlympusOSS/repositories"
              >
                GitHub
              </a>
            </li>
            <li>
              <a
                class="text-[13px] font-medium text-muted-foreground no-underline transition-colors hover:text-foreground"
                href="/changelog"
              >
                Changelog
              </a>
            </li>
            <li>
              <a
                class="text-[13px] font-medium text-muted-foreground no-underline transition-colors hover:text-foreground"
                href="/security"
              >
                Security
              </a>
            </li>
            <li>
              <a
                class="text-[13px] font-medium text-muted-foreground no-underline transition-colors hover:text-foreground"
                href="/contact"
              >
                Contact
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="mt-10 flex flex-col items-center justify-between gap-2 border-t border-border pt-5 text-xs text-muted-foreground sm:flex-row"
      >
        <span>
          Apache 2.0 · © 
          2026
           Olympus
        </span>
        <span
          class="font-mono"
        >
          v2.3.0
        </span>
      </div>
    </div>
  </footer>
</div>
`;

exports[`SiteFooter (snapshot) > matches snapshot without logoSrc 1`] = `
<div>
  <footer
    class="border-t border-border bg-background px-4 pb-6 pt-12 sm:px-6"
  >
    <div
      class="mx-auto max-w-[1100px]"
    >
      <div
        class="grid gap-8 sm:grid-cols-2 lg:[grid-template-columns:1.4fr_1fr_1fr_1fr]"
      >
        <div
          class="sm:col-span-2 lg:col-span-1"
        >
          <div
            class="mb-2.5 flex items-center gap-2.5"
          >
            <span
              class="text-sm font-semibold text-foreground"
            >
              Olympus
            </span>
          </div>
          <p
            class="m-0 max-w-[280px] text-[13px] leading-relaxed text-muted-foreground"
          >
            A free identity solution and OAuth2 layer for teams that run their own infrastructure.
          </p>
        </div>
        <div>
          <div
            class="mb-2.5 font-mono text-xs font-medium uppercase tracking-[0.06em] text-muted-foreground"
          >
            Product
          </div>
          <ul
            class="m-0 flex list-none flex-col gap-2 p-0"
          >
            <li>
              <a
                class="text-[13px] font-medium text-muted-foreground no-underline transition-colors hover:text-foreground"
                href="https://github.com/OlympusOSS/hera"
              >
                hera (auth UI)
              </a>
            </li>
            <li>
              <a
                class="text-[13px] font-medium text-muted-foreground no-underline transition-colors hover:text-foreground"
                href="https://github.com/OlympusOSS/athena"
              >
                athena (admin)
              </a>
            </li>
            <li>
              <a
                class="text-[13px] font-medium text-muted-foreground no-underline transition-colors hover:text-foreground"
                href="https://github.com/OlympusOSS/canvas"
              >
                canvas (design system)
              </a>
            </li>
            <li>
              <a
                class="text-[13px] font-medium text-muted-foreground no-underline transition-colors hover:text-foreground"
                href="https://github.com/OlympusOSS/sdk"
              >
                SDK
              </a>
            </li>
          </ul>
        </div>
        <div>
          <div
            class="mb-2.5 font-mono text-xs font-medium uppercase tracking-[0.06em] text-muted-foreground"
          >
            Docs
          </div>
          <ul
            class="m-0 flex list-none flex-col gap-2 p-0"
          >
            <li>
              <a
                class="text-[13px] font-medium text-muted-foreground no-underline transition-colors hover:text-foreground"
                href="/docs"
              >
                Getting started
              </a>
            </li>
            <li>
              <a
                class="text-[13px] font-medium text-muted-foreground no-underline transition-colors hover:text-foreground"
                href="/docs/integrate/oauth2-overview"
              >
                OAuth2
              </a>
            </li>
            <li>
              <a
                class="text-[13px] font-medium text-muted-foreground no-underline transition-colors hover:text-foreground"
                href="/docs/identity/identity-schemas"
              >
                Kratos schemas
              </a>
            </li>
            <li>
              <a
                class="text-[13px] font-medium text-muted-foreground no-underline transition-colors hover:text-foreground"
                href="/docs/deploy/overview"
              >
                Self-hosting
              </a>
            </li>
          </ul>
        </div>
        <div>
          <div
            class="mb-2.5 font-mono text-xs font-medium uppercase tracking-[0.06em] text-muted-foreground"
          >
            Company
          </div>
          <ul
            class="m-0 flex list-none flex-col gap-2 p-0"
          >
            <li>
              <a
                class="text-[13px] font-medium text-muted-foreground no-underline transition-colors hover:text-foreground"
                href="https://github.com/orgs/OlympusOSS/repositories"
              >
                GitHub
              </a>
            </li>
            <li>
              <a
                class="text-[13px] font-medium text-muted-foreground no-underline transition-colors hover:text-foreground"
                href="/changelog"
              >
                Changelog
              </a>
            </li>
            <li>
              <a
                class="text-[13px] font-medium text-muted-foreground no-underline transition-colors hover:text-foreground"
                href="/security"
              >
                Security
              </a>
            </li>
            <li>
              <a
                class="text-[13px] font-medium text-muted-foreground no-underline transition-colors hover:text-foreground"
                href="/contact"
              >
                Contact
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="mt-10 flex flex-col items-center justify-between gap-2 border-t border-border pt-5 text-xs text-muted-foreground sm:flex-row"
      >
        <span>
          Apache 2.0 · © 
          2026
           Olympus
        </span>
        <span
          class="font-mono"
        >
          v2.3.0
        </span>
      </div>
    </div>
  </footer>
</div>
`;
